Tue Aug 31 19:01:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Full_Profile/ftp.cpp:
          When the input file cannot be opened, log an error and return -1
          instead of going on further without an input file, which results
          in strange crashes.

Tue Aug 31 10:00:48 2004  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/be/be_visitor_array/array_ch.cpp:

          When an array is not nested inside a class we need to specify the
          storage type as the TAO_EXPORT_MACRO to get the functions
          required for copying, freeing, duplicating and allocating exported
          into the dll for Windows.

Tue Aug 31 14:55:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Updated some debug messages so that the formatting matches other
          messages in TAO and when the log is read, it is clear where this
          message is coming from.

Tue Aug 31 09:06:40 2004  Dale Wilson  <wilson_d@ociweb.com>

        * interop-tests/wchar/interop_wchar_i.cpp:
          Another exception emulation problem.

Tue Aug 31 13:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp (dump_iov):
          Updated formatting of debug messages so that it matches other debug
          lines

Tue Aug 31 13:25:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/ORT/run_test.pl:
          New perl script that is usefull to automatically run this example,
          the example itself it still broken, working on it but the script
          saves a lot of test time

Tue Aug 31 11:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Big_Oneways/server.cpp:
          Added some more debug statements so that we can better track the
          steps of the server

Tue Aug 31 09:23:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html: